--- a/latex/gpu_solver.tex
+++ b/latex/gpu_solver.tex
@@ -158,6 +158,16 @@ Apple, Intel, AMD, NVidia all support OpenCL.  Unfortunately Apple overrides ven
 
 One serious limitation exists with the choice of OpenCL. Since the language is intended to function across a slew of platforms, the language itself is limited to a subset of hardware features common to the different vendors. Features like 2-D and 3-D textures, which are part of the CUDA standard, are vendor provided extensions in OpenCL. 
 
+
+
+The two level parallelization can even be extended to three level parallelism
+with pThreads or OpenMP \cite{NVidia_multi-gpu_example}. While OpenCL provides
+the means to target parallelism on either multi-core CPUs or many-core GPUs, it
+does not allow a parallel kernel on one hardware interact with a parallel kernel
+on the another. That is to say, an OpenCL kernel on the CPU cannot launch
+kernels on the GPU.  
+
+
 \subsection{Custom Kernels}
 
 From the definition of RBF-FD we can formulate the problem computationally in two ways. First, stencil operations are independent. Therefore, we can write kernels with perfect parallelism by dedicating a single thread per stencil or a group of threads per stencil.  
