--- a/latex/explicit_pde_solutions.tex
+++ b/latex/explicit_pde_solutions.tex
@@ -259,12 +259,9 @@ Table~\ref{tbl:cos_hv_params}.
 
 %\clearpage
 
-Figure~\ref{fig:cosine_10revs} shows the cosine bell transported ten full revolutions around the sphere. Without hyperviscosity, RBF-FD cannot complete a single revolution of the bell before instability takes over. However, adding hyperviscosity allows computation to extend to dozens or even thousands of revolutions and maintain stability (e.g., see \cite{FornbergLehto11}). After ten revolutions, the cosine bell is still intact. The majority of the absolute error (Figure~\ref{fig:cosine_abserror}) appears at the base of the $C^1$ bell where the discontinuity appears in the derivative. At ten revolutions, Figure~\ref{fig:conv_cosine_bell} illustrates the convergence of the RBF-FD method. All tests in Figure~\ref{fig:conv_cosine_bell} assume 1000 time-steps per revolution (i.e., $\Delta t = 1036.8$ seconds). 
+Figure~\ref{fig:cosine_10revs} shows the cosine bell transported ten full revolutions around the sphere. Without hyperviscosity, RBF-FD cannot complete a single revolution of the bell before instability takes over. However, adding hyperviscosity allows computation to extend to dozens or even thousands of revolutions and maintain stability (e.g., see \cite{FornbergLehto11}). After ten revolutions, the cosine bell is still intact. The majority of the absolute error (Figure~\ref{fig:cosine_abserror}) appears at the base of the $C^1$ bell where the discontinuity appears in the derivative. At ten revolutions, Figure~\ref{fig:conv_cosine_bell} illustrates the convergence of the RBF-FD method. All tests in Figure~\ref{fig:conv_cosine_bell} assume 1000 time-steps per revolution (i.e., $\Delta t = 1036.8$ seconds or 17.28 minutes). We find that 1000 time-steps is a conservative estimate that stably advects the bell even up to highest resolution MD node set, $N=27556$ nodes. Compare this to the still conservative 30 minute time-step taken for $N=4096$ nodes in \cite{FlyerWright07}, and note that the authors scaled back the RBF method 30 minutes was half the number necessary for the competing Discontinuous Galerkin implementation and 8x less than necessary for both Spherical Harmonics and Double Fourier methods.
 
-
-\hl{Complete:}
-%TODO: where did I get 17.28 minutes? 1036.8 / 60 = 17.28
-17.28 minutes was a conservative step that allowed the problem to scale up to $N=27556$ nodes. Compare this to the conservative 30 minute time-step taken for $N=4096$ nodes in \cite{FlyerWright07}, which was already half necessary for DG and 8x less than necessary for both Spherical Harmonics and Double Fourier methods.\authnote{It would be good to quantify the appropriate $dt$ that would compare RBF-FD to their $N=4096$ case with global RBFs.} 
+%TODO: It would be good to quantify the appropriate $dt$ that would compare RBF-FD to their $N=4096$ case with global RBFs.
 
 
 \begin{figure}[htbp]
@@ -305,9 +302,9 @@ where the bell of radius $R = \frac{a}{3}$ is centered at $(\lambda_c, \theta_c)
 \end{eqnarray*}
 We assume $a = 1$, $h_0 = 1$, and $(\lambda_c, \theta_c) = (^{3\pi}/_{2}, 0)$. The angle $\alpha =\ ^{\pi}/_{2}$ is chosen to transport the bell over the poles of the coordinate system, and $u_0 =\ ^{2 \pi a}/_{1036800}$. 
 
-\authnote{State that we can split operator to test cases like nonlinear PDEs.} 
+%TODO: State that we can split operator to test cases like nonlinear PDEs.
 
-\authnote{Include figures from NCL or Paraview}
+%TODO: Include figures from NCL or Paraview
 
 \subsection{CFL}
 We constrict our timesteps according to the Courant-Friedrich-Lewy (CFL) condition: 
